Backported v0.1.1.0