@@ -3,10 +3,11 @@ package io.github.lightman314.lctech.client.util;
 import java.util.EnumMap;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.google.common.collect.Lists;
-import net.minecraft.core.Direction;
+import net.minecraft.util.Direction;
 
 public class FluidSides
 {
@@ -16,7 +17,7 @@ public class FluidSides
 	public static final FluidSides NO_BOTTOM = Create(side -> side != Direction.DOWN);
 	public static final FluidSides NO_TOP_OR_BOTTOM = Create(side -> !side.getAxis().isVertical());
 	public static FluidSides Create(Direction... sides) { return new FluidSides(sides); }
-	public static FluidSides Create(Predicate<Direction> allowSide) { return new FluidSides(Stream.of(Direction.values()).filter(allowSide).toList()); }
+	public static FluidSides Create(Predicate<Direction> allowSide) { return new FluidSides(Stream.of(Direction.values()).filter(allowSide).collect(Collectors.toList())); }
 
 	private final EnumMap<Direction,Boolean> map = new EnumMap<>(Direction.class);
 
